--- a/temps/partials/header.ejs
+++ b/temps/partials/header.ejs
@@ -1,4 +1,4 @@
-<% var item, key %><%
+<% var item, key; %><%
 htmlWebpackPlugin.options.lang = htmlWebpackPlugin.options.lang || 'en' %><%
 htmlWebpackPlugin.options.links = htmlWebpackPlugin.options.links || [] %><%
 htmlWebpackPlugin.options.meta = htmlWebpackPlugin.options.meta || [] %><%
